--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UNIVASSIST</title>
+    <title>TYPOUNIVERSE</title>
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable.min.css" />
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -161,6 +161,9 @@
                                 <input type="text" class="color-input" id="text-color-input" value="#333333">
                                 <input type="color" class="color-picker" id="text-color-picker" value="#333333">
                             </div>
+                            <button id="ai-text-color-btn" style="margin-top: 8px; padding: 8px 16px; background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%); color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 13px; font-weight: 600; width: 100%; transition: all 0.3s ease; box-shadow: 0 2px 4px rgba(99, 102, 241, 0.2);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 8px rgba(99, 102, 241, 0.3)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 4px rgba(99, 102, 241, 0.2)'">
+                                🤖 AI가 텍스트 색상 추천
+                            </button>
                         </div>
                          <div class="input-group">
                             <label>Line height</label>
@@ -181,6 +184,9 @@
                                 <span class="status-badge pass" id="aaa-status">AAA</span>
                             </div>
                             <p class="contrast-info" id="contrast-info">WCAG 2.1 기준, 일반 텍스트는 4.5:1(AA), 7:1(AAA) 이상이어야 합니다.<br>기준 통과시 초록색, 기준 미달시 빨간색으로 표시됩니다.</p>
+                            <p class="contrast-info" id="ai-recommendation" style="margin-top: 10px; padding: 10px; background: #f0f4ff; border-radius: 8px; font-size: 13px; color: #4338ca; display: none;">
+                                <strong>💡 AI 추천:</strong> <span id="ai-reasoning"></span>
+                            </p>
                         </div>
                     </div>
                     <div class="text-preview" id="text-preview">
