--- a/index.html
+++ b/index.html
@@ -161,9 +161,6 @@
                                 <input type="text" class="color-input" id="text-color-input" value="#333333">
                                 <input type="color" class="color-picker" id="text-color-picker" value="#333333">
                             </div>
-                            <button id="ai-text-color-btn" style="margin-top: 8px; padding: 8px 16px; background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%); color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 13px; font-weight: 600; width: 100%; transition: all 0.3s ease; box-shadow: 0 2px 4px rgba(99, 102, 241, 0.2);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 8px rgba(99, 102, 241, 0.3)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 4px rgba(99, 102, 241, 0.2)'">
-                                🤖 AI가 텍스트 색상 추천
-                            </button>
                         </div>
                          <div class="input-group">
                             <label>Line height</label>
@@ -173,6 +170,14 @@
                             </div>
                         </div>
                     </div>
+                    
+                    <!-- AI 텍스트 색상 추천 버튼 -->
+                    <div style="text-align: right; margin-top: 15px;">
+                        <button id="ai-text-color-btn" class="interactive-button" style="background: #ff6b6b;">
+                            AI 텍스트 색상 추천
+                        </button>
+                    </div>
+                    
                     <div class="contrast-display">
                         <div class="contrast-ratio-wrapper">
                             <div style="font-size: 12px; color: #666; margin-bottom: 5px;">텍스트-배경 명도대비</div>
@@ -184,8 +189,9 @@
                                 <span class="status-badge pass" id="aaa-status">AAA</span>
                             </div>
                             <p class="contrast-info" id="contrast-info">WCAG 2.1 기준, 일반 텍스트는 4.5:1(AA), 7:1(AAA) 이상이어야 합니다.<br>기준 통과시 초록색, 기준 미달시 빨간색으로 표시됩니다.</p>
-                            <p class="contrast-info" id="ai-recommendation" style="margin-top: 10px; padding: 10px; background: #f0f4ff; border-radius: 8px; font-size: 13px; color: #4338ca; display: none;">
-                                <strong>💡 AI 추천:</strong> <span id="ai-reasoning"></span>
+                            <p class="contrast-info" id="ai-recommendation" style="margin-top: 10px; padding: 15px; background: #f0f4ff; border-radius: 8px; font-size: 14px; color: #4338ca; display: none; border-left: 4px solid #6366f1;">
+                                <strong>💡 AI 추천 텍스트 색상:</strong> <code id="ai-text-color" style="background: #e0e7ff; padding: 4px 8px; border-radius: 4px; font-weight: 600; font-size: 15px;">#FFFFFF</code><br>
+                                <span style="font-size: 13px; color: #64748b; margin-top: 8px; display: inline-block;" id="ai-reasoning"></span>
                             </p>
                         </div>
                     </div>
