--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                                 <input type="text" class="color-input" id="text-color-input" value="#333333">
                                 <input type="color" class="color-picker" id="text-color-picker" value="#333333">
                             </div>
-                            <button id="ai-text-color-btn" style="margin-top: 8px; padding: 8px 16px; background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%); color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 13px; font-weight: 600; width: 100%; transition: all 0.3s ease; box-shadow: 0 2px 4px rgba(99, 102, 241, 0.2);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 8px rgba(99, 102, 241, 0.3)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 4px rgba(99, 102, 241, 0.2)'">
-                                🤖 AI가 텍스트 색상 추천
+                            <button id="ai-text-color-btn" style="margin-top: 8px; padding: 8px 16px; background: linear-gradient(135deg, #6366f1 0%, #8b5cf6 100%); color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 13px; font-weight: 600; width: 100%; transition: all 0.3s ease; box-shadow: 0 2px 4px rgba(99, 102, 241, 0.2); font-family: 'Pretendard Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 8px rgba(99, 102, 241, 0.3)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 4px rgba(99, 102, 241, 0.2)'">
+                                ✨ AI 디자이너의 색상 추천
                             </button>
                         </div>
                          <div class="input-group">
